--- a/yellowdragon.html
+++ b/yellowdragon.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href="index.html">Yellow Dragon & Partners</a></h1>
   <ol>
-    <li><a href="1.html">Yellow Dragon</a></li>
-    <li><a href="2.html">Sick Tiger</a></li>
-    <li><a href="3.html">Smartstone</a></li>
+    <li><a href="yellowdragon.html">Yellow Dragon</a></li>
+    <li><a href="sicktiger.html">Sick Tiger</a></li>
+    <li><a href="smartstone.html">Smartstone</a></li>
   </ol>
   <h2>Yellow Dragon, who are you?</h2>
   <p>
