--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   </ol>
   <h2>Our Dream and Venture</h2>
   <p>
-    <img src="C:\Users\bhj73\OneDrive\바탕 화면\web\matt-duncan-IUY_3DvM__w-unsplash.jpg" width="30%">
+    <img src="/smartstone5815/web1/blob/main/matt-duncan-IUY_3DvM__w-unsplash.jpg" width="30%">
   </p>
 </body>
 </html>
