--- a/yellowdragon.html
+++ b/yellowdragon.html
@@ -13,7 +13,7 @@
   </ol>
   <h2>Yellow Dragon, who are you?</h2>
   <p>
-    <img src="C:\Users\bhj73\OneDrive\바탕 화면\web\ridwan-meah-6Cu80n4Iscc-unsplash.jpg" width="30%">
+    <img src="/smartstone5815/web1/blob/main/ridwan-meah-6Cu80n4Iscc-unsplash.jpg" width="30%">
   </p>
   </body>
 </html>
