--- a/sicktiger.html
+++ b/sicktiger.html
@@ -13,7 +13,7 @@
   </ol>
   <h2>Sick Tiger, who are you?</h2>
   <p>
-    <img src="C:\Users\bhj73\OneDrive\바탕 화면\web\edewaa-foster-aWkpMIIC5aY-unsplash.jpg" width="30%">
+    <img src="/smartstone5815/web1/blob/main/edewaa-foster-aWkpMIIC5aY-unsplash.jpg" width="30%">
   </p>
   </body>
 </html>
