--- a/smartstone.html
+++ b/smartstone.html
@@ -13,7 +13,7 @@
   </ol>
   <h2>Smartstone, who are you?</h2>
   <p>
-    <img src="C:\Users\bhj73\OneDrive\바탕 화면\web\hans-jurgen-mager-AZ31hv9kdzE-unsplash.jpg" width="30%">
+    <img src="/smartstone5815/web1/blob/main/hans-jurgen-mager-AZ31hv9kdzE-unsplash.jpg" width="30%">
   </p>
   </body>
 </html>
