--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
 <body>
   <h1><a href="index.html">Welcome to Yellow Dragon & Partners</a></h1>
   <ol>
-    <li><a href="1.html">Yellow Dragon</a></li>
-    <li><a href="2.html"></a>Sick Tiger</li>
-    <li><a href="3.html">Smartstone</a></li>
+    <li><a href="yellowdragon.html">Yellow Dragon</a></li>
+    <li><a href="sicktiger.html"></a>Sick Tiger</li>
+    <li><a href="smartstone.html">Smartstone</a></li>
   </ol>
   <h2>Our Dream and Venture</h2>
   <p>
